--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,30 +1,42 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     width: 100%;
     height: 100vh;
     background-color: #EBEBEB;
 }
-main{
-    display: flex;
+
+main {
+    width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: end;
+
+    overflow-y: scroll;
 }
-img.logo{
+
+img.logo {
     width: 200px;
 }
-aside#left{
-    width: 70%;
+
+aside#left {
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-right: 1px solid grey;
-    
+    padding: 0 3%;
 }
-form.form{
+
+form.form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,9 +44,9 @@ form.form{
     height: max-content;
     background-color: white;
     padding: 20px;
-    width: 90%;
 }
-form .input{
+
+form .input {
     width: 100%;
     padding: 3px;
     border-radius: 3px;
@@ -44,68 +56,85 @@ form .input{
     outline: none;
     margin: 2%;
 }
-button.sendBtn{
+
+button.sendBtn {
     border: none;
     background-color: #C40C11;
     color: white;
     border-radius: 5px;
     width: max-content;
     height: 25px;
-    padding: 2px 3px;
+    padding: 5px;
+    margin: 7px;
 }
+
 button.sendBtn:hover {
     border: 2px solid #C40C11;
     background-color: white;
     color: #C40C11;
     border-radius: 5px;
 }
-span.split{
+
+span.split {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
-input::placeholder{
+
+input::placeholder {
     color: grey;
 }
-aside#right{
+
+aside#right {
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    
     align-items: center;
-    max-width: 35%;
     overflow-y: scroll;
+    height: max-content;
+    margin-right: 15%;
 }
-.pdf img.logo{
-    width: 80%;
+
+aside#right > article.pdf {
+    position: relative;
+    width: 397px;
+    height: 545px !important;
+    font-size: 30px;
+    letter-spacing: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    margin: 10px;
 }
-.pdf span#custName{
+
+.pdf span#custName {
     text-align: center;
-   
+
 }
-.pdf strong{
+
+.pdf strong {
     align-self: flex-end;
-   
+
 }
-.pdf span#address{
-    width: 100px;
+
+.pdf small {
+    font-size: 14px;
+}
+
+.pdf span#address {
+    text-align: center;
     color: #C40C11;
-    font-size: 10px;
+    font-size: 16px;
 }
-.pdf span#prodName{
+
+.pdf span#prodName {
     text-align: center;
     color: #C40C11;
     border: 2px solid black;
     padding: 5px;
-    margin: 10px;
-}
-.pdf{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 80%;
-    height:max-content;
-    padding: 10px;
     margin: 10px;
 }
